--- a/src/Pages/Choose.css
+++ b/src/Pages/Choose.css
@@ -1,7 +1,7 @@
 .button-container {
     display: flex;
     justify-content: center;
-    gap: 15px;
+    gap: 100px;
 }
 
 button {
@@ -9,6 +9,7 @@ button {
     height: 100px;
     border-radius: 50%;
     background-color: rgb(240, 107, 134);
+    color: white;
     border: none;
     cursor: pointer;
     font-size: 16px;
