--- a/src/Components/Card.css
+++ b/src/Components/Card.css
@@ -1,19 +1,17 @@
-.card {
-    border: 1px solid hsl(0, 0%, 80%);
-    border-radius: 10px;
-    box-shadow: 5px 5px 5px hsl(0, 0%, 0%, 0.1);
-    padding: 20px;
-    margin: 10px;
-    text-align: center;
-    max-width: 250px;
-    display: inline-block;
-}
-
-.profile-pic {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    /* Makes it circular */
-    object-fit: cover;
-    /* Ensures the image is properly cropped */
-}
+        .card {
+            border-radius: 30px;
+            background-color: white;
+            box-shadow: 5px 5px 5px hsl(0, 0% 0%, 0.1);
+            padding: 20px;
+            margin: 20px;
+            text-align: left;
+            width: 250px;
+            max-width: 500px;
+            display: inline-block;
+            overflow: hidden;
+            white-space: nowrap;
+            /*this is to prevent the text from wrapping */
+            transition: width 0.3s ease-in-out;
+        }
+        
+        .card :hover {}
