--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -1,17 +1,30 @@
 .footer {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     position: fixed;
     /* Keeps it fixed at the bottom */
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
     /* Centers the footer */
-    width: 90%;
+    width: 100%;
     /* Adjust width to fit properly */
-    max-width: 1250px;
     /* Prevents it from stretching too wide */
     padding: 15px 20px;
     border-radius: 15px;
     text-align: left;
-    background-color: white;
-    box-shadow: 5px 5px 15px rgb(194, 194, 194);
+    background-color: rgba(255, 255, 255, 0.4)
+}
+
+.footer-header {
+    display: flex;
+    align-items: center;
+    /* Aligns text and GIF in the same row */
+    gap: 10px;
+    /* Adds spacing between text and GIF */
+}
+
+.smallGIF {
+    max-width: 50px;
 }
