--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body,
     padding: 0;
     overflow-x: hidden;
     /* Prevents horizontal scroll */
-    background: linear-gradient(to bottom, #ffc1ca, #ffffff);
+    background: linear-gradient(to bottom, #c1e3ff, #ffeded);
 }
 
 .App-logo {
